--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2"
   }
 }
